# ai-coding-agent

./: .env.example  docker-compose.yml  loggers.py  main.py  pyproject.toml  requirements.txt
agent/: planner.py  state.py
apps/api/: main.py
mcp/: client.py  server.py
mcp_protocol/: client.py  server.py
models/: qwen2.py
prompts/: planner_prompt.py
src/agents/: __init__.py
src/agents/coding/: coding_agent.py  register.py
src/agents/contracts/: agent_protocol.py
src/agents/factory/: agent_factory.py
src/agents/planner/: planner_agent.py
src/agents/registry/: agent_registry.py
src/config/: settings.py
src/core/: base_agent.py  base_llm.py  base_skill.py  base_tool.py  factory.py  registry.py
src/core/helpers/: agent_response_formats.py
src/core/prompts/: coding_agent_prompt.py  planner_prompt.py
src/core/registry/: agent_registry.py  llm_registrty.py  tool_registry.py
src/graph/: builder.py  client.py  edges.py  graph_factory.py  nodes.py  state.py
src/llms/: base_llm.py
src/llms/factory/: llm_factory.py
src/llms/providers/: openai_provider.py
src/llms/registry/: llm_registry.py
src/runtime/: orchestrator.py
src/shared/config/: settings.py
src/shared/utils/: base_registry.py
src/skills/registry/: skill_registry.py
src/tools/contracts/: tool_protocol.py
src/tools/factory/: tool_factory.py
src/tools/filesystem/: write_file_tool.py
src/tools/mcp/: mcp_server.py
src/tools/registry/: tool_registry.py
src/workflows/graphs/: coding_graph.py
utils/: loggers.py
