[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.18",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "mcp[cli]>=1.26.0",
    "openai>=2.36.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "smolagents>=1.24.0",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]
